--- a/tasks/templates/registration/register.html
+++ b/tasks/templates/registration/register.html
@@ -7,8 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #e0f7fa; /* Нежно бирюзовый фон */
-            color: #00796b; /* Темно-зеленый цвет текста */
+            background-color: #e0f7fa;
+            color: #00796b;
             margin: 0;
             padding: 0;
         }
@@ -24,7 +24,7 @@
 
         h1 {
             text-align: center;
-            color: #004d40; /* Темно-бирюзовый заголовок */
+            color: #004d40;
             margin-bottom: 30px;
         }
 
@@ -83,13 +83,23 @@
         <form method="POST">
             {% csrf_token %}
             <div class="form-group">
-                <label for="email">Email Address</label>
-                <input type="email" name="email" id="email" required placeholder="Enter your email" />
+                <label for="id_username">Username</label>
+                {{ form.username }}
             </div>
 
             <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" required placeholder="Enter your password" />
+                <label for="id_email">Email Address</label>
+                {{ form.email }}
+            </div>
+
+            <div class="form-group">
+                <label for="id_password1">Password</label>
+                {{ form.password1 }}
+            </div>
+
+            <div class="form-group">
+                <label for="id_password2">Confirm Password</label>
+                {{ form.password2 }}
             </div>
 
             <button type="submit">Register</button>
