--- a/tasks/templates/user_profile.html
+++ b/tasks/templates/user_profile.html
@@ -1,4 +1,5 @@
 <h2>Мои заметки</h2>
+
 {% if messages %}
   <ul class="messages">
     {% for message in messages %}
@@ -7,6 +8,21 @@
   </ul>
 {% endif %}
 
+<!-- Форма для фильтрации заметок -->
+<form method="get" style="margin-top: 20px;">
+    <input type="text" name="q" placeholder="Поиск по заголовку" value="{{ query }}">
+    <input type="date" name="filter_date" value="{{ filter_date }}">
+
+    <!-- Добавляем выбор категории -->
+    <select name="category">
+        <option value="">Все категории</option>
+        {% for cat in categories %}
+            <option value="{{ cat.name }}" {% if cat.name == filter_category %}selected{% endif %}>{{ cat.name }}</option>
+        {% endfor %}
+    </select>
+
+    <button type="submit">Фильтровать</button>
+</form>
 
 <!-- Проверка на наличие заметок -->
 {% if notes %}
@@ -22,13 +38,6 @@
 {% else %}
     <p>У вас нет заметок.</p>
 {% endif %}
-
-<!-- Форма для фильтрации заметок -->
-<form method="get" style="margin-top: 20px;">
-    <input type="text" name="q" placeholder="Поиск по заголовку" value="{{ query }}">
-    <input type="date" name="filter_date" value="{{ filter_date }}">
-    <button type="submit">Фильтровать</button>
-</form>
 
 <!-- Кнопка для создания новой заметки -->
 <a href="{% url 'create_entry' %}" style="display: inline-block; margin-top: 20px;">➕ Добавить новую заметку</a>
